[package]
name = "md-to-pdf"
authors = ["spawnia <benedikt@franke.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket      = { version = "0.5.1", features = ["json", "tls"] }
rocket_cors = "0.6"
tempfile    = "3"
log         = "0.4"

# Добавил фичи json/fs/secrets для Rocket, и зависимости rocket_cors, tempfile, log
